kubernetes/platform/config/gateway/external-gateway.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: external
  annotations:
    external-dns.alpha.kubernetes.io/target: gw.ionfury.tv
spec:
  infrastructure:
    parametersRef:
      group: ""
      kind: ConfigMap
      name: gateway-deployment-defaults
    annotations:
      lbipam.cilium.io/ips: ${external_ingress_ip}
  gatewayClassName: istio
  listeners:
    - name: https
      hostname: "*.${external_domain}"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: external-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: http
      hostname: "*.${external_domain}"
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
