kubernetes/platform/config/gateway/internal-gateway.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
spec:
  infrastructure:
    parametersRef:
      group: ""
      kind: ConfigMap
      name: gateway-deployment-defaults
    annotations:
      lbipam.cilium.io/ips: ${internal_ingress_ip}
  gatewayClassName: istio
  listeners:
    - name: https
      hostname: "*.${internal_domain}"
      port: 443
      protocol: HTTPS
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: internal-tls
      allowedRoutes:
        namespaces:
          from: All
